Add files correctly

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
         </div>
 
         <div class="project-card">
-            <img class="project-img" src="../Screenshot%202026-02-16%20154711.png" alt="Astra AI Chatbot">
+            <img class="project-img" src="Screenshot%202026-02-16%20154711.png" alt="Astra AI Chatbot">
             <div class="project-title">Astra AI Chatbot</div>
             <div class="project-meta">Machine Learning • Community • User Accessibility</div>
             <div class="project-desc">
