--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         </div>
 
         <div class="hero-card">
-            <img class="profile-img" src="src/main/resources/templates/Screenshot%202025-08-11%20113434.png" alt="Faaezah">
+            <img class="profile-img" src="Screenshot%202025-08-11%20113434.png" alt="Faaezah">
             <h3>Faaezah</h3>
             <p>Computer science engineer • Java Tutor • Always building, always learning — one project at a time.</p>
             <div class="hero-meta">
@@ -533,7 +533,7 @@
         </div>
 
         <div class="project-card">
-            <img class="project-img" src="src/main/resources/templates/Screenshot%202026-02-16%20154056.png" alt="Data Encryption Research">
+            <img class="project-img" src="Screenshot%202026-02-16%20154056.png" alt="Data Encryption Research">
             <div class="project-title">Data Encryption Research</div>
             <div class="project-meta">Python • Algorithms • Cybersecurity</div>
             <div class="project-desc">
