--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="73zTRQwNNdBVYX67eMtduE8sWB2KL8WFXixZWEgSpOY" />
     <link rel="icon" type="image/x-icon" href="android-chrome-512x512.png">
     <meta charset="UTF-8">
     <title>Faaezah Shaik — Computer Science Portfolio</title>
